--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ on: push
 name: CI
 jobs:
   phpunit:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     container:
       image: kirschbaumdevelopment/laravel-test-runner:7.3
  
