--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=animalie-server.mysql.database.azure.com
 DB_PORT=3306
 DB_DATABASE=animalie-database
 DB_USERNAME=root
